tests/positive/Test29.sp
(***** Testing arrays ******* )
get_array()[i+1   ];
a[0];