tests/negative/Test17.sp
(* Testing wrong value for variables *)
pi:String = i 1;